--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
   },
   "settings": {
     "import/resolver": {
-      "alias": []
+      "alias": [["utilities", "./src/utilities"]]
     }
   }
 }
