--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "semi": true,
-    "printWidth": 200,
-    "singleQuote": false,
-    "jsxBracketSameLine": true,
-    "jsxSingleQuote": false
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "printWidth": 100,
+  "singleQuote": false,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "singleAttributePerLine": true
 }
